Fix button width on mobile

--- a/styles/DefaultBtn.module.scss
+++ b/styles/DefaultBtn.module.scss
@@ -1,7 +1,8 @@
 @import "globals.scss";
 .btn {
     border: 2px solid $yellow;
-    width: 215px;
+    width: 100%;
+    max-width: 14rem;
     background-color: transparent;
     font-family: "Arvo";
     font-style: normal;
